# ArvoreBmaisED

./: README.md  a.out  arvbmais.c  arvbmais.h  instrucoes.txt  main.c  pizza.c  pizza.h
referencia/: arvbmRosseti.c  pizza.c  pizza.h
referencia/arvore-b-mais-disco/__MACOSX/: ._arvore-b-mais-disco
referencia/arvore-b-mais-disco/__MACOSX/arvore-b-mais-disco/: ._.idea  ._CMakeLists.txt  ._Makefile  ._arvore_b_mais.c  ._arvore_b_mais.h  ._build  ._cliente.c  ._cliente.h  ._cmake-build-debug  ._lista_clientes.c  ._lista_clientes.h  ._lista_nos_folhas.c  ._lista_nos_folhas.h  ._lista_nos_internos.c  ._lista_nos_internos.h  ._metadados.c  ._metadados.h  ._no_folha.c  ._no_folha.h  ._no_interno.c  ._no_interno.h  ._test_arvore_b_mais.c  ._ufftest.h
referencia/arvore-b-mais-disco/arvore-b-mais-disco/: CMakeLists.txt  arvore_b_mais.c  arvore_b_mais.h  cliente.c  cliente.h  lista_clientes.c  lista_clientes.h  lista_nos_folhas.c  lista_nos_folhas.h  lista_nos_internos.c  lista_nos_internos.h  metadados.c  metadados.h  no_folha.c  no_folha.h  no_interno.c  no_interno.h  test_arvore_b_mais.c  ufftest.h
